--- a/css/main.css
+++ b/css/main.css
@@ -4,23 +4,79 @@
     box-sizing: inherit;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto:500', sans-serif;
 }
 
-/* Rectangle */
-
-/*position: absolute;*/
-/*width: 1920px;*/
-/*left: 0px;*/
-/*top: 0px;*/
-
-/*!* 5 *!*/
-/*background: #002239;*/
-
-header {
-    width: 100%;
-    height: 99px;
+.header {
     background-color: #002239;
 }
+
+.container {
+    width: 100%;
+    height: 99px;
+    max-width: 1044px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    color: #fff;
+}
+
+.add_item {
+    font-size: 14px;
+}
+
+.add_item p span {
+    font-size: 20px;
+    padding-right: 9px;
+}
+
+.header_profile {
+    position: relative;
+}
+
+.status_online {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
+
+.search_btn {
+    background-image: url("img/search.png");
+    width: 23px;
+    height: 23px;
+    background-size: 100%;
+    object-fit: contain;
+    border: 1px solid #fff;
+}
+
+.check_city {
+    min-width: 305px;
+    height: 29px;
+    background-color: #fff;
+    border-radius: 60px;
+    color: #000;
+}
+
+.profile_nav {
+    display: none;
+}
+
+.search_btn {
+
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
