--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ body {
 }
 
 .header_profile__cab {
-    display: none;
+    /*display: none;*/
     position: absolute;
     min-width: 165px;
     min-height: 166px;
@@ -361,7 +361,7 @@ body {
 }
 
 .claim__text {
-    display: none;
+    /*display: none;*/
     margin: 15px 0 0 10px;
     padding: 7px;
     color: #a3a3a3;
